# ViperBoxInterface

./: .gitignore  README.md  VB_classes.py  ViperBox.py  gui.py  main.py  pyproject.toml  start_app.bat
defaults/: default_settings.xml  defaults.py
docs/source/: conf.py
docs/source/reference/: index.md  viperboxinterface.VB_classes.md  viperboxinterface.control.md  viperboxinterface.data_classes.md  viperboxinterface.gui.md  viperboxinterface.main.md  viperboxinterface.md  viperboxinterface.server.md
mapping/: electrode_mapping_short_cables.xlsx
setup/: create_shortcut.ps1  install.bat  update.ps1
viperboxinterface/: VB_classes.py  ViperBox.py  XML_handler.py  api_classes.py  control.py  data_classes.py  data_thread.py  gui.py  main.py  mappings.py  server.py
viperboxinterface/Scripts/API_example/: help_functions.py  script.py
viperboxinterface/defaults/: default_settings.xml  default_stimulation_settings.xml  defaults.py  electrode_mapping_short_cables.xlsx
